# star-randsrv

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  cbindgen.toml  default.nix  flake.nix  go.mod  go.sum  main.go  main_test.go  start.sh
.github/: CODEOWNERS
.github/workflows/: codeql.yml  generalized-deployments-reproducible.yaml  makefile.yaml
misc/temporary-enclave-bypass/: Dockerfile  Makefile  nginx.conf
misc/temporary-enclave-bypass/scripts/: build.sh  run.sh  start-proxies.sh
src/: handler.rs  instance.rs  lib.rs  main.c  main.rs  result.rs  state.rs  tests.rs  update.rs  util.rs
