[package]
name = "star-randsrv"
version = "0.2.0"
authors = ["Ralph Giles <rgiles@brave.com>"]
description = "STAR randomness webservice"
license = "MPL-2.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-prometheus = "0.6.1"
base64 = "0.21.7"
calendar-duration = "1.0.0"
clap = { version = "4.5.1", features = ["derive"] }
ppoprf = "0.3.1"
rlimit = "0.10"
serde = "1.0.197"
serde_json = "1.0.114"
thiserror = "1.0.57"
tikv-jemallocator = "0.5"
time = { version = "0.3.31", features = ["formatting", "parsing"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
curve25519-dalek = { version = "4.1.2", features = ["rand_core"] }
rand = { version = "0.8.5", features = ["getrandom"] }
tower = "0.4.13"

[profile.release]
lto = "thin"
panic = "abort"
strip = true
codegen-units = 1
