[package]
name = "star-randsrv"
version = "0.3.0"
authors = ["Ralph Giles <rgiles@brave.com>"]
description = "STAR randomness webservice"
license = "MPL-2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-prometheus = "0.6.1"
base64 = "0.22.1"
bincode = "1.3.3"
calendar-duration = "1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
ppoprf = { version = "0.4.0", features = ["key-sync"], path = "../sta-rs/ppoprf" }
reqwest = { version = "0.12.5", default-features = false, features = ["charset", "macos-system-configuration"] }
rlimit = "0.10"
serde = "1.0.200"
serde_json = "1.0.115"
thiserror = "1.0.58"
tikv-jemallocator = "0.5"
time = { version = "0.3.31", features = ["formatting", "parsing"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
curve25519-dalek = { version = "4.1.2", features = ["rand_core"] }
rand = { version = "0.8.5", features = ["getrandom"] }
tower = "0.4.13"

[profile.release]
lto = "thin"
panic = "abort"
strip = true
codegen-units = 1
