[package]
name = "star-randsrv"
version = "0.2.0"
authors = ["Ralph Giles <rgiles@brave.com>"]
description = "STAR randomness webservice"
license = "MPL-2.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-prometheus = "0.7.0"
base64 = "0.22.1"
calendar-duration = "1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
ppoprf = "0.4.0"
rlimit = "0.10"
serde = "1.0.200"
serde_json = "1.0.115"
thiserror = "1.0.58"
tikv-jemallocator = "0.5"
time = { version = "0.3.31", features = ["formatting", "parsing"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
curve25519-dalek = { version = "4.1.2", features = ["rand_core"] }
rand = { version = "0.8.5", features = ["getrandom"] }
tower = "0.4.13"

[profile.release]
lto = "thin"
panic = "abort"
strip = true
codegen-units = 1
